# sod2d

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  README.md  oldLicense.txt  sod2d  sod2d.x
cmake/: compilerOps.cmake  constants.cmake  gempa.cmake  git.cmake  gpu.cmake  hdf5.cmake  json-fortran.cmake  localCompilers.cmake  marenostrumCompilers.cmake  mpi.cmake  nvidia-smi-cc.cmake  powerpcCompilers.cmake  sensei.cmake  smartredis.cmake
cpu_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cpu_build_barce/: CMakeCache.txt  Makefile  cmake_install.cmake
cpu_build_barce_p5/: CMakeCache.txt  Makefile  (+1 more)
src/: CMakeLists.txt  elem_convec.f90  elem_diffu.f90  elem_hex.f90  elem_qua.f90  elem_source.f90  inicond_reader.f90  jacobian_oper.f90  mass_matrix.f90  mesh_reader.f90  mod_analysis.f90  mod_aver.f90  mod_bc_routines.f90  mod_constants.f90  mod_entropy_viscosity.f90  mod_fluid_viscosity.f90  mod_geom.f90  mod_gpu_vars.f90  mod_graph.f90  mod_maths.f90  mod_output.f90  mod_period.f90  mod_postpro.f90  mod_sgs_ilsa_viscosity.f90  mod_sgs_viscosity.f90  mod_solver.f90  mod_time_ops.f90  mod_veclen.f90  module mod_bc_routines.f90  quadrature_rules.f90  time_integ.f90
src/app_readCreateParMesh/: CMakeLists.txt
src/app_readCreateParMesh/sources/: read_create_par_mesh.f90
src/app_sod2d/: CMakeLists.txt
src/app_sod2d/sources/: sod2d.f90
src/app_testComms/: CMakeLists.txt
src/app_testComms/sources/: test_comm_performance.f90
src/lib_gempaInterface/: CMakeLists.txt
src/lib_gempaInterface/sources/: gempa_interface.cpp
src/lib_mainBaseClass/: CMakeLists.txt
src/lib_mainBaseClass/config_files/: BLFlowSolver.json  BluffBody3DSolver.json  SupersonicForwardStep.json  TGVCompSolver.json  TGVSolver.json  ThermalBubbleSolver.json  TransientInletSolverIncomp.json  WindFarmSolverIncomp.json
src/lib_mainBaseClass/sources/: ABlFlowSolverIncomp.f90  BLAPGFlowSolver.f90  BLFlowSolver.f90  BLFlowSolverIncomp.f90  BLFlowSolverIncompAFC.f90  BLFlowSolverIncompDRL.f90  BLFlowSolverIncompDebug.f90  BLFlowSolverIncompTest.f90  BLFlowSolverIncompTest2.f90  BLFlowSolverTest.f90  BLMARLFlowSolverIncomp.f90  BLTSBDRLFlowSolver.f90  BLTSBFlowSolver.f90  BluffBody3DSolver.f90  BluffBody3DSolverDim.f90  BluffBody3DSolverEuler.f90  BluffBody3DSolverIncomp.f90  BluffBodySolver.f90  BluffBodySolverIncomp.f90  BluffBodySolverIncompAFC.f90  BluffBodySolverIncompDRL.f90  CFDSolver3DWithBoundaries.f90  CFDSolver3DWithBoundariesIncomp.f90  CFDSolverBase.f90  CFDSolverPeriodic.f90  CFDSolverPeriodicIncomp.f90  CFDSolverPeriodicWithBoundaries.f90  CFDSolverPeriodicWithBoundariesIncomp.f90  ChannelFlowSolver.f90  ChannelFlowSolverIncomp.f90  DLRSolver.f90  HelicopterSolverIncomp.f90  MappedInletIncomp.f90  MeshElasticitySolver.f90  SupersonicForwardStep.f90  SupersonicNozzle.f90  TGVCompSolver.f90  TGVMultiSolver.f90  TGVSolver.f90  TGVSolverIncomp.f90  (+6 more)
src/lib_meshElasticity/: CMakeLists.txt
src/lib_meshElasticity/sources/: dummy_meshElasticity.f90  elem_diffu_meshElasticity.f90  mod_bc_routines_meshElasticity.f90  mod_mesh_quality.f90  mod_quality.f90  mod_solver_meshElasticity.f90
src/lib_sod2d/: CMakeLists.txt
src/lib_sod2d/sources/: elem_convec.f90  elem_diffu.f90  elem_hex.f90  elem_qua.f90  elem_source.f90  elem_stab.f90  inicond_reader.f90  jacobian_oper.f90  mass_matrix.f90  mesh_reader.f90  mod_InSitu.f90  mod_analysis.f90  mod_aver.f90  mod_bc_routines.f90  mod_comms.f90  mod_comms_boundaries.f90  mod_comms_peformance.f90  mod_comms_performance.f90  mod_constants.f90  mod_correct_neumann.f90  mod_custom_types.f90  mod_entropy_viscosity.f90  mod_filters.f90  mod_fluid_viscosity.f90  mod_geom.f90  mod_gmsh_indices.f90  mod_graph.f90  mod_hdf5.f90  mod_ijk_indices.f90  mod_inicond_reader.f90  mod_ioutils.f90  mod_maths.f90  mod_mesh_boundaries.f90  mod_mesh_quality.f90  mod_mpi.f90  mod_mpi_mesh.f90  mod_numerical_params.f90  mod_nvtx.f90  mod_output.f90  mod_period.f90  (+21 more)
src/lib_sod2d_incomp/: CMakeLists.txt
src/lib_sod2d_incomp/sources/: dummy.f90  elem_convec_incomp.f90  elem_diffu_incomp.f90  elem_stab_incomp.f90  mod_bc_routines_incomp.f90  mod_entropy_viscosity_incomp.f90  mod_operators.f90  mod_solver_incomp.f90  time_integ_incomp.f90
src/lib_species/: CMakeLists.txt
src/lib_species/sources/: elem_conv_species.f90  elem_diffu_species.f90  elem_stab_species.f90  mod_bc_routines_species.f90  mod_dummy_species.f90  mod_entropy_viscosity_species.f90  mod_solver_species.f90  mod_wall_model_species.f90  time_integ_species.f90  time_integ_species_imex.f90  time_integ_species_rk4.f90
src/main/: mod_aver.f90  sod2d.f90  sod2d_new.f90
src/main/classes/: BluffBodySolver.f90  CFDSolverBase.f90  CFDSolverPeriodic.f90  CFDSolverPeriodicWithBoundaries.f90  ChannelFlowSolver.f90  TGVCompSolver.f90  TGVSolver.f90  ThermalChannelFlowSolver.f90
tool_commsPerformance/: CMakeLists.txt
tool_commsPerformance/example_inputFile/: input_tool_commsPerformance.json  input_tool_commsPerformance_noMesh.json
tool_commsPerformance/sources/: mod_comms_performance.f90  tool_comms_performance.f90
tool_copyResults/: CMakeLists.txt
tool_copyResults/example_inputFile/: input_tool_copyResults_avg.json  input_tool_copyResults_inst.json  input_tool_copyResults_inst2restart.json  input_tool_copyResults_mapping.json  input_tool_copyResults_restart.json
tool_copyResults/src/: mod_copy_results.f90  tool_copy_results.f90
tool_meshConversorPar/: CMakeLists.txt
tool_meshConversorPar/example_inputFile/: input_tool_meshConversorPar.json
tool_meshConversorPar/lib_gempaInterface/: CMakeLists.txt
tool_meshConversorPar/src/: mod_meshConversorTool.f90  mod_mesh_quality.f90  mod_partition_utils.f90  tool_meshConversorPar.f90
tool_postProc/: CMakeLists.txt
tool_postProc/src/: mod_cgns_mesh.f90  tool_hdf5_to_cgns.f90  tool_hdf5_to_vtkhdf.f90
utils/: CMakeLists.txt  buildCPU.sh  buildGPU.sh  ncu_mpi.sh  nsys_mpi.sh  run_ToolMeshPart.sh
utils/ansa2sod2d/: ansa2sod2d.py
utils/gmsh2sod2d/: gmsh2sod2d.py
utils/interpolate/: interpolate.py
(+192 files in other folders)
